Internal: Update doctrine.yaml to use attributes instead of annotations for Gedmo mappings - refs BT#22627

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -56,25 +56,25 @@ doctrine:
                 prefix: 'Chamilo\LtiBundle\Entity'
                 alias: ChamiloLtiBundle
             gedmo_translatable:
-                type: annotation
+                type: attribute
                 prefix: Gedmo\Translatable\Entity
                 dir: "%kernel.project_dir%/vendor/gedmo/doctrine-extensions/src/Translatable/Entity"
                 alias: GedmoTranslatable # (optional) it will default to the name set for the mapping
                 is_bundle: false
             gedmo_translator:
-                type: annotation
+                type: attribute
                 prefix: Gedmo\Translator\Entity
                 dir: "%kernel.project_dir%/vendor/gedmo/doctrine-extensions/src/Translator/Entity"
                 alias: GedmoTranslator # (optional) it will default to the name set for the mapping
                 is_bundle: false
             gedmo_loggable:
-                type: annotation
+                type: attribute
                 prefix: Gedmo\Loggable\Entity
                 dir: "%kernel.project_dir%/vendor/gedmo/doctrine-extensions/src/Loggable/Entity"
                 alias: GedmoLoggable # (optional) it will default to the name set for the mappingmapping
                 is_bundle: false
             gedmo_tree:
-                type: annotation
+                type: attribute
                 prefix: Gedmo\Tree\Entity
                 dir: "%kernel.project_dir%/vendor/gedmo/doctrine-extensions/src/Tree/Entity"
                 alias: GedmoTree # (optional) it will default to the name set for the mapping
