Vendor: Require symfony/ldap

--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "ext-iconv": "*",
         "ext-intl": "*",
         "ext-json": "*",
+        "ext-ldap": "*",
         "ext-libxml": "*",
         "ext-mbstring": "*",
         "ext-pdo": "*",
@@ -141,6 +142,7 @@
         "symfony/html-sanitizer": "6.4.*",
         "symfony/http-client": "6.4.*",
         "symfony/intl": "6.4.*",
+        "symfony/ldap": "6.4.*",
         "symfony/mailer": "6.4.*",
         "symfony/mailjet-mailer": "6.4.*",
         "symfony/messenger": "6.4.*",
