--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,9 @@ security:
             encode_as_base64: false
             cost: 4
 
+        Symfony\Component\Ldap\Security\LdapUser:
+            algorithm: auto
+
         Chamilo\CoreBundle\Entity\User:
             algorithm: auto
             migrate_from:
@@ -120,6 +123,7 @@ security:
                 - Chamilo\CoreBundle\Security\Authenticator\OAuth2\FacebookAuthenticator
                 - Chamilo\CoreBundle\Security\Authenticator\OAuth2\KeycloakAuthenticator
                 - Chamilo\CoreBundle\Security\Authenticator\OAuth2\AzureAuthenticator
+                - Chamilo\CoreBundle\Security\Authenticator\Ldap\LdapAuthenticator
 
     access_control:
         - { path: ^/login/token/check, roles: PUBLIC_ACCESS }
