--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -120,6 +120,7 @@ security:
                 - Chamilo\CoreBundle\Security\Authenticator\OAuth2\FacebookAuthenticator
                 - Chamilo\CoreBundle\Security\Authenticator\OAuth2\KeycloakAuthenticator
                 - Chamilo\CoreBundle\Security\Authenticator\OAuth2\AzureAuthenticator
+                - Chamilo\CoreBundle\Security\Authenticator\Ldap\LdapAuthenticator
 
     access_control:
         - { path: ^/login/token/check, roles: PUBLIC_ACCESS }
