--- a/src/CoreBundle/Resources/config/listeners.yml
+++ b/src/CoreBundle/Resources/config/listeners.yml
@@ -126,3 +126,7 @@ services:
         - { name: doctrine.orm.entity_listener, event: postPersist, entity_manager: default, lazy: true }
         - { name: doctrine.orm.entity_listener, event: postUpdate, entity_manager: default, lazy: true }
 
+    Chamilo\CoreBundle\EventListener\UserAuthSourceListener:
+        tags:
+            - name: kernel.event_listener
+              event: Symfony\Component\Security\Http\Event\CheckPassportEvent
