Auth: Filter user access by their access url #4328

--- a/src/CoreBundle/Resources/config/listeners.yml
+++ b/src/CoreBundle/Resources/config/listeners.yml
@@ -130,3 +130,8 @@ services:
         tags:
             - name: kernel.event_listener
               event: Symfony\Component\Security\Http\Event\CheckPassportEvent
+
+    Chamilo\CoreBundle\EventListener\UserAccessUrlListener:
+        tags:
+            - name: kernel.event_listener
+              event: Symfony\Component\Security\Http\Event\CheckPassportEvent
