Internal: Fix deprecation warnings: update API platform and framework settings for serializer and GraphQL

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -50,6 +50,15 @@ api_platform:
 
     use_symfony_listeners: true
 
+    serializer:
+        hydra_prefix: true
+
+    keep_legacy_inflector: false
+
+    graphql:
+        graphql_playground:
+            enabled: false
+
 #    mercure:
 #        hub_url: '%env(MERCURE_SUBSCRIBE_URL)%'
 
